--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -153,6 +153,12 @@
             <artifactId>jaxb-core</artifactId>
             <version>2.3.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.gridgain</groupId>
+            <artifactId>ignite-kubernetes</artifactId>
+            <version>8.7.127-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <properties>
